# csi6556-marabou

./: README.md  REPORT.org  bibliography.bib  mise.toml  pyproject.toml  setup.py  test
maraboupy/: Marabou.py  MarabouMain.py  MarabouNetwork.py  MarabouNetworkNNet.py  MarabouNetworkONNX.py  MarabouNetworkTF.py  MarabouPythonic.py  MarabouUtils.py
maraboupy/docs/: conf.py
maraboupy/examples/: 0_NNetExample.py  1_TensorflowExample.py  2_ONNXExample.py  3_MarabouCoreExample.py  4_DncExample.py  5_DisjunctionConstraintExample.py  6_IncrementalSolvingExample.py
maraboupy/parsers/: InputQueryBuilder.py  ONNXParser.py
maraboupy/test/: test_core.py  test_disjunction.py  test_dnc.py  test_equation.py  test_incremental.py  test_network.py  test_nnet.py  test_nnet_extensions.py  test_onnx.py  test_pythonic_interface.py  test_query.py  test_statistics.py  test_tf.py
regress/: run_regression.py
resources/: runMarabou.py
resources/custom/: fmnist_784x16x16x10.onnx  fmnist_784x16x16x10_e25.onnx  fmnist_784x16x16x10_e50.onnx  train_fmnist_fc.py
resources/onnx/layer-zoo/: onnx-layer-zoo.py
resources/properties/mnist/: dump_mnist_targeted_attack.py
