[build-system]
requires = ["setuptools>=67", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "maraboupy"
version = "2.0.0"
authors = [{ name = "The Marabou Development Team" }]
description = "A package wrapping the Marabou Neural Network Verification tool."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.8,<3.12"
dependencies = [
  "numpy",
  "torch==2.9",
  "torchvision==0.24",
  "tensorflow==2.12",
  "onnx==1.16.1",
  "onnxruntime==1.20.0",
  "onnxscript~=0.5"
]

[project.scripts]
Marabou = "maraboupy.MarabouMain:main"

[tool.setuptools]
packages = ["maraboupy"]

[tool.bumpver]
current_version = "v2.0.0"
version_pattern = "vMAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
  '^version = "{pep440_version}"$',
  '^current_version = "{version}"$',
]
"CMakeLists.txt" = ['^set(MARABOU_VERSION {pep440_version})$']

[tool.cibuildwheel]
# 2023-04-17: cross-compilation with cibuildwheel does not work with our CMake configuration
archs = ["native"]
build-frontend = "build"
skip = [
  # 2023-04-16: pybind11 does not support PyPy
  "pp*",
  # 2023-04-16: skip building musllinux wheels
  "*musllinux*"
]
before-test = ["python {package}/setup.py build_ext --inplace"]
test-command = "pytest {package}/maraboupy/test"
test-extras = ["test"]
test-skip = []

[tool.cibuildwheel.linux]
before-all = "yum install -y wget"

[tool.cibuildwheel.macos]
test-skip = [
  # 2023-04-15: Skip trying to test arm64 builds on Intel Macs
  "*-macosx_arm64",
  "*-macosx_universal2:arm64"
]
